Pretty-fied the movies layout, fixed a layout bug with padding at the top when navbar was set to fixed-top.

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,7 @@
 .pull-left {
     background-color: gray;
 }
+
+.container {
+    padding-top: 70px;
+}
